  end up containing non-UTF-8 characters (and hence not
  be openable)
- Fix bug: the internal $error variable associated with
  the --continue option to (e.g.) "arima" could get stuck
  on within a command loop
- Fix bug: ensure that the "dataset addobs" command is
  recorded in the session command log when observations
  are added in the course of forecasting
- "fcast": add a --plot option to generate a plot of the
  forecast in batch mode
- L-BFGS-B: add a "set" variable, lbfgs_mem, to control the
  number of corrections used in the limited memory matrix 
- GUI dialogs for mle, gmm: add controller for BFGS details
- "scatters" command: add an --output option as for the
  "gnuplot" command
- Fix bug: the popup menu item "Execute line", in script
  windows, was not working
- Fix bug: bad Weibull plot (under "Distribution graphs")
  when adding Weibull curve to an existing plot that includes
  negative values of x
- Add facility to display normal and logistic CDFs
- Add convenience function: logistic()
- MS Windows package: update pango and gnuplot
- Scalar variables: improve GUI management, and add a 
  --scalars option to the "varlist" command
- "mols" function: add option of retrieving the covariance
  matrix
- Add new function "weekday"
- Fix memory leak on repeated sub-sampling
- Miscellaneous small GUI fixes

10/10/2009 version 1.8.5
- Fix: avoid duplicating the return line when saving
  packaged functions that were originally old-style
- Several refinements for function-package editor
- Update the gretl function package DTD
- genr: improvements in type-handling for some tricky
  cases
- Internal clean-up: revamp gretl's mechanism for reading
  configuration info and setting paths at start-up
- Fix bug in handling of the R dll on Windows
- Function parameter [min:max:default] values: fix bug
  for locales using ',' as decimal separator
- Fix bugs 2843717, 2848633, 2865384
- Fix bug in corrgm() function when the series given as