@@ -20,6 +20,8 @@ version 1.8.6, in progress
 - Fix bug: ensure that the "dataset addobs" command is
   recorded in the session command log when observations
   are added in the course of forecasting
+- Fix bug: corruption in saving GARCH models in a session
+  file
 - "fcast": add a --plot option to generate a plot of the
   forecast in batch mode
 - L-BFGS-B: add a "set" variable, lbfgs_mem, to control the
